<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:contentDescription="@string/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgLogo"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            />
        <TextView
            android:textAlignment="center"
            android:id="@+id/tvsilahkan"
            android:layout_marginBottom="50dp"
            android:layout_below="@id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silahkan"
            />

        <EditText
            android:inputType="text"
            android:autofillHints="username"
            android:drawableStart="@drawable/ic_username"
            android:textAlignment="center"
            android:hint="@string/hint_username"
            android:id="@+id/username"
            android:layout_below="@id/tvsilahkan"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:autofillHints="password"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:hint="@string/password"
            android:id="@+id/password"
            android:layout_below="@id/username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:background="@drawable/btn_sign_in"
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_in" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:layout_below="@id/btnlogin"
            android:layout_marginTop="@dimen/fab_margin"
            android:textAlignment="center"
            />




        </RelativeLayout>

</LinearLayout>